# Siemens-OOP-Assignment-Packet-Analyzer

./: .gitignore  CMakeLists.txt  README.md  fileWriteVisitor.cpp  fileWriteVisitor.h  myfile.txt  visitor.h
header/: Runner.h
header/Packet/: EthernetPacket.h  Packet.h  ecpriPacket.h
header/Parser/: EcpriParser.h  EthernetParser.h  Parser.h  ParserFactory.h
header/constants/: PacketFields.h
header/fileVisitor/: fileWriteVisitor.h  visitor.h
main/: main.cpp
source/: Runner.cpp
source/Packet/: EthernetPacket.cpp  Packet.cpp  ecpriPacket.cpp
source/Parser/: EcpriParser.cpp  EthernetParser.cpp  Parser.cpp  ParserFactory.cpp
source/fileVisitor/: fileWriteVisitor.cpp  visitor.cpp
